# freenew

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
freenew/: __main__.py  constants.py  models.py
